--- a/en/Admin/Upgrade/3.6.rst
+++ b/en/Admin/Upgrade/3.6.rst
@@ -6,10 +6,14 @@ Changes :
 
   * A major schema enhancement happens for meta values. Multivalued values were
     stored serialized and are now stored separatly.
-    Two routes are modified : records/metadatas and records/setmetadatas.
-    A route has been added to make it easy to display caption : records/caption.
+    Two routes are modified : :doc:`Records/Metadatas
+    </Devel/API/V1/Route/Records/Metadatas>` and :doc:`Records/SetMetadatas
+    </Devel/API/V1/Route/Records/SetMetadatas>`.
+    A route has been added to make it easy to display caption :
+    :doc:`Records/Caption </Devel/API/V1/Route/Records/Caption>`.
 
-  .. seealso:: :doc:`Complete documentation to upgrade to API 1.1 <APIupgrade>`
+  .. seealso:: :doc:`Complete documentation to upgrade to API 1.1
+        </Devel/API/V1/Upgrade/1.1>`
 
   .. warning::
 
