Move API 1.1 Doc into Devel

--- a/en/Devel/API/V1.rst
+++ b/en/Devel/API/V1.rst
@@ -5,15 +5,16 @@ Documentation API v1
    :maxdepth: 2
 
    V1/Overview
+   V1/Upgrade/1.1
    V1/Authentication
    V1/Routes
 
 Hello world !
 
-Phraseanet API v1 gives you access to lots of Phraseanet data and lets 
-you interact with them. 
-Integrate the search engine, build your own applications and plugins! 
-Give us your feedback and if you publish your code, let us know and 
+Phraseanet API v1 gives you access to lots of Phraseanet data and lets
+you interact with them.
+Integrate the search engine, build your own applications and plugins!
+Give us your feedback and if you publish your code, let us know and
 we'll also do so.
 
 Start easy easy :
@@ -22,9 +23,9 @@ Start easy easy :
   * Get familiar with :doc:`oAuth2 <V1/Authentication>`
   * Find your :doc:`route <V1/Routes>` !
 
-If you ever find bugs, please report them on the 
-`mailing-list <https://groups.google.com/group/phraseanet-api>`_  
-or create a ticket on our 
+If you ever find bugs, please report them on the
+`mailing-list <https://groups.google.com/group/phraseanet-api>`_
+or create a ticket on our
 `public issue tracker <https://github.com/alchemy-fr/Phraseanet/issues>`_.
 
 
