--- a/fr/Admin/Upgrade/3.7.rst
+++ b/fr/Admin/Upgrade/3.7.rst
@@ -8,6 +8,8 @@ Changement API V1.2 => lien vers le changelog API
 
 Changement de code de retour de la console
 
+tf-filename tf-basename tf-duration
+
 
 Quoi de neuf ?
 --------------
