--- a/fr/Admin/Upgrade/3.7.rst
+++ b/fr/Admin/Upgrade/3.7.rst
@@ -17,5 +17,7 @@ Quoi de neuf ?
 * Ajout de nouveaux formats d’encodage video (Compatibilité HTML5)
 * Ajout de périphériques de destination pour les sous-définitions
 * Possibilité de choisir la vignette extraite d’une video (:doc:`Outils images <../../User/Manuel/Actions>`)
-* Sortie du SDK Phraseanet dont la documentation est disponible ici: `http://phraseanet-php-sdk.readthedocs.org/ <http://phraseanet-php-sdk.readthedocs.org/>`_.
-  Cette SDK est une boîte à outils PHP prête à l’emploi pour développer vos applications en exploitant Phraseanet.
+* Sortie du `SDK Phraseanet`_. Cette SDK est une boîte à outils PHP prête à
+  l’emploi pour développer vos applications en exploitant Phraseanet.
+
+.. _SDK Phraseanet: http://phraseanet-php-sdk.readthedocs.org/
