--- a/fr/Admin/Upgrade/3.6.rst
+++ b/fr/Admin/Upgrade/3.6.rst
@@ -15,8 +15,10 @@ Les changements :
     Une route est ajoutée pour faciliter l'affichage des fiches :
     :doc:`Records/Caption </Devel/API/V1/Route/Records/Caption>`.
 
-.. seealso:: :doc:`documentation complète du passage en API 1.1
-        </Devel/API/V1/Upgrade/1.1>`
+.. seealso::
+
+    :doc:`documentation complète du passage en API 1.1
+    </Devel/API/V1/Upgrade/1.1>`
 
 .. warning::
 
