--- a/fr/Admin/Upgrade/3.6.rst
+++ b/fr/Admin/Upgrade/3.6.rst
@@ -18,7 +18,7 @@ Les changements :
 .. seealso::
 
     :doc:`documentation complète du passage en API 1.1
-    </Devel/API/V1/Upgrade/1.1>`
+    </Devel/API/Changelog>`
 
 .. warning::
 
