Adressed @anthonycabot 's comment

--- a/en/Devel/API/V1.rst
+++ b/en/Devel/API/V1.rst
@@ -8,7 +8,7 @@ Documentation API v1
    V1/Authentication
    V1/Routes
    V1/Examples
-   V1/Recommandation
+   V1/Recommendation
    V1/Disclaimer
 
 Hello world !
