--- a/en/Devel/API/V1.rst
+++ b/en/Devel/API/V1.rst
@@ -7,6 +7,7 @@ Documentation API v1
    V1/Overview
    V1/Authentication
    V1/Routes
+   V1/CORS
    V1/Examples
    V1/Recommendation
    V1/Disclaimer
