--- a/fr/Admin/Changelog/4.0.rst
+++ b/fr/Admin/Changelog/4.0.rst
@@ -1,7 +1,9 @@
 Version 4.0
 ===========
 
-Voici les principaux changements et nouveautés apportés par la version 4.0.
+====================================
+Principaux changements et nouveautés
+====================================
 
 Introduction du moteur Elasticsearch
 ------------------------------------
@@ -13,4 +15,17 @@ Refonte des interfaces
 ----------------------
 
 Les interfaces ont été remaniées.
+
+================
+Changelog Github
+================
+
+* `Version 4.0.9 <https://github.com/alchemy-fr/Phraseanet/releases/tag/4.0.9>`_
+* `Version 4.0.8 <https://github.com/alchemy-fr/Phraseanet/releases/tag/4.0.8>`_
+* `Version 4.0.7 <https://github.com/alchemy-fr/Phraseanet/releases/tag/4.0.7>`_
+* `Version 4.0.3 <https://github.com/alchemy-fr/Phraseanet/releases/tag/4.0.3>`_
+* `Version 4.0.2 <https://github.com/alchemy-fr/Phraseanet/releases/tag/4.0.2>`_
+* `Version 4.0.1 <https://github.com/alchemy-fr/Phraseanet/releases/tag/4.0.1>`_
+* `Version 4.0.0 <https://github.com/alchemy-fr/Phraseanet/releases/tag/4.0.0>`_
+
 
